# tickysim

./: .gitignore  Makefile.am  README.md  arbiter.h  buffer.c  buffer.h  configure.ac  main.c  scheduler.h
configs/: deadlock.config  mohsen.config  mohsen_quick.config  spinnaker.config  timeouts.config
fpga_tables/Lookups/144_Nodes/: 00_to_all_120.txt  00_to_all_16.txt  00_to_all_53.txt
fpga_tables/Lookups/144_Nodes/Complement/: 144_lookup_100.txt  144_lookup_120.txt  144_lookup_16.txt  144_lookup_18.txt  144_lookup_20.txt  144_lookup_23.txt  144_lookup_27.txt  144_lookup_32.txt  144_lookup_40.txt  144_lookup_43.txt  144_lookup_47.txt  144_lookup_50.txt  144_lookup_53.txt  144_lookup_80.txt
fpga_tables/Lookups/144_Nodes/Tornado/: 144_lookup_100.txt  144_lookup_120.txt  144_lookup_16.txt  144_lookup_18.txt  144_lookup_20.txt  144_lookup_23.txt  144_lookup_27.txt  144_lookup_32.txt  144_lookup_40.txt  144_lookup_43.txt  144_lookup_47.txt  144_lookup_50.txt  144_lookup_53.txt  144_lookup_80.txt
fpga_tables/Lookups/144_Nodes/Transpose/: 144_lookup_100.txt  144_lookup_120.txt  144_lookup_16.txt  144_lookup_18.txt  144_lookup_20.txt  144_lookup_23.txt  144_lookup_27.txt  144_lookup_32.txt  144_lookup_40.txt  144_lookup_43.txt  144_lookup_47.txt  144_lookup_50.txt  144_lookup_53.txt  144_lookup_80.txt
fpga_tables/Lookups/144_Nodes/Uniform/: 144_lookup_100.txt  144_lookup_120.txt  144_lookup_16.txt  144_lookup_18.txt  144_lookup_20.txt  144_lookup_23.txt  144_lookup_27.txt  144_lookup_32.txt  144_lookup_40.txt  144_lookup_43.txt  144_lookup_47.txt  144_lookup_50.txt  144_lookup_53.txt  144_lookup_80.txt
fpga_tables/Lookups/64_Nodes/: 1_to_all_120.txt  1_to_all_16.txt  1_to_all_53.txt
fpga_tables/Lookups/64_Nodes/uniform/: 64_lookup_100.txt  64_lookup_120.txt  64_lookup_140.txt  64_lookup_16.txt  64_lookup_160.txt  64_lookup_18.txt  64_lookup_20.txt  64_lookup_200.txt  64_lookup_23.txt  64_lookup_250.txt  64_lookup_27.txt  64_lookup_32.txt  64_lookup_40.txt  64_lookup_43.txt  64_lookup_47.txt  64_lookup_50.txt  64_lookup_53.txt  64_lookup_8.txt  64_lookup_80.txt
spinn144tables/: spin144.0.0  spin144.0.1  spin144.0.10  spin144.0.11  spin144.0.2  spin144.0.3  spin144.0.4  spin144.0.5  spin144.0.6  spin144.0.7  spin144.0.8  spin144.0.9  spin144.1.0  spin144.1.1  spin144.1.10  spin144.1.11  spin144.1.2  spin144.1.3  spin144.1.4  spin144.1.5  spin144.1.6  spin144.1.7  spin144.1.8  spin144.1.9  spin144.10.0  spin144.10.1  spin144.10.10  spin144.10.11  spin144.10.2  spin144.10.3  spin144.10.4  spin144.10.5  spin144.10.6  spin144.10.7  spin144.10.8  spin144.10.9  spin144.11.0  spin144.11.1  spin144.11.10  spin144.11.11  (+104 more)
src/: Makefile.am  arbiter.c  arbiter.h  arbiter_internal.h  buffer.c  buffer.h  buffer_internal.h  delay.c  delay.h  delay_internal.h  main.c  mohsen.config  scheduler.c  scheduler.h  scheduler_internal.h  spinn.h  spinn_main.c  spinn_packet.c  spinn_packet.h  spinn_packet_internal.h  spinn_router.c  spinn_router.h  spinn_router_internal.h  spinn_sim.c  spinn_sim.h  spinn_sim_config.c  spinn_sim_config.h  spinn_sim_model.c  spinn_sim_model.h  spinn_sim_stat.c  spinn_sim_stat.h  spinn_stat.c  spinn_stat.h  spinn_topology.c  spinn_topology.h  spinn_topology_internal.h  spinnaker.config
tests/: Makefile.am  check_arbiter.c  check_buffer.c  check_check.c  check_check.h  check_delay.c  check_scheduler.c  check_spinn_packet_con.c  check_spinn_packet_gen.c  check_spinn_packet_init_dor.c  check_spinn_packet_pool.c  check_spinn_router.c  check_spinn_topology.c
util/: check_fpga_tables.sh  group_gen.py  heatmap_plot.gnuplot  heatmap_plot.sh  heatmap_summary.sh  mohsen_heatmap_gen.py  mohsen_table_check.py  outline_gen.py  pad_heatmap.py  per_node_counter_plot.py  plot_routes.py  routing_table_gen.py  run_experiment.sh  spinn_heatmap_gen.py  topology.py
